--- a/CatchIT/CatchIT/Leaderboard.xib
+++ b/CatchIT/CatchIT/Leaderboard.xib
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,10 +13,51 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leaderboard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STa-lX-1Oa">
+                    <rect key="frame" x="40" y="129" width="246.5" height="56.5"/>
+                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="41"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D1a-lC-WfL">
+                    <rect key="frame" x="336" y="159.5" width="44" height="36"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <state key="normal" title="Filter">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                </button>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MjJ-fI-1Qa">
+                    <rect key="frame" x="40" y="200.5" width="359" height="581.5"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filter" translatesAutoresizingMaskIntoConstraints="NO" id="kn3-fC-36x">
+                    <rect key="frame" x="383" y="170.5" width="16" height="15"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="kn3-fC-36x" secondAttribute="height" multiplier="1:1" constant="1" id="KJO-H4-GcA"/>
+                        <constraint firstAttribute="height" constant="15" id="kqf-uf-M71"/>
+                    </constraints>
+                </imageView>
+            </subviews>
+            <color key="backgroundColor" red="0.25882352941176467" green="0.70588235294117641" blue="0.35686274509803922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="MjJ-fI-1Qa" firstAttribute="top" secondItem="D1a-lC-WfL" secondAttribute="bottom" constant="5" id="68U-i0-aVS"/>
+                <constraint firstItem="MjJ-fI-1Qa" firstAttribute="top" secondItem="kn3-fC-36x" secondAttribute="bottom" constant="15" id="BFA-Hu-9ob"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="MjJ-fI-1Qa" secondAttribute="bottom" constant="80" id="CVC-hZ-EG9"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="MjJ-fI-1Qa" secondAttribute="trailing" constant="15" id="DAS-67-521"/>
+                <constraint firstItem="MjJ-fI-1Qa" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="40" id="V2J-vN-XHi"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="kn3-fC-36x" secondAttribute="trailing" constant="15" id="Zzi-kl-Taf"/>
+                <constraint firstItem="STa-lX-1Oa" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="85" id="lpG-Dr-RT6"/>
+                <constraint firstItem="MjJ-fI-1Qa" firstAttribute="top" secondItem="STa-lX-1Oa" secondAttribute="bottom" constant="15" id="ozD-g1-9ej"/>
+                <constraint firstItem="kn3-fC-36x" firstAttribute="leading" secondItem="D1a-lC-WfL" secondAttribute="trailing" constant="3" id="sAj-1B-o3j"/>
+                <constraint firstItem="STa-lX-1Oa" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="40" id="yN5-MH-g1e"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
         </view>
     </objects>
+    <resources>
+        <image name="filter" width="512" height="512"/>
+    </resources>
 </document>
